--- a/package.json
+++ b/package.json
@@ -13,19 +13,23 @@
     "@babel/preset-env": "^7.24.8",
     "@babel/preset-react": "^7.24.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18.3.0",
     "babel-loader": "^8.2.5",
     "electron": "^24.0.0",
     "electron-is-dev": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
     "react-refresh": "^0.11.0",
+    "typescript": "^5.5.4",
     "wait-on": "^6.0.0",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.1",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-scripts": "^5.0.1"
   }
 }
