--- a/package.json
+++ b/package.json
@@ -5,18 +5,19 @@
   "scripts": {
     "start": "npm-run-all --parallel start:react start:electron",
     "start:react": "webpack serve --mode development",
-    "start:electron": "wait-on http://localhost:3000 && electron ."
+    "start:electron": "wait-on http://localhost:3000 && electron .",
+    "build": "webpack --mode production"
   },
   "devDependencies": {
     "@babel/core": "^7.24.9",
     "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.24.8",
+    "@babel/preset-env": "^7.25.0",
     "@babel/preset-react": "^7.24.7",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "babel-loader": "^8.2.5",
-    "electron": "^24.0.0",
+    "babel-loader": "^8.3.0",
+    "electron": "^24.8.8",
     "electron-is-dev": "^2.0.0",
     "html-webpack-plugin": "^5.5.0",
     "npm-run-all": "^4.1.5",
@@ -24,12 +25,13 @@
     "typescript": "^5.5.4",
     "wait-on": "^6.0.0",
     "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.1",
+    "webpack-cli": "^5.1.4",
     "webpack-dev-server": "^5.0.4"
   },
   "dependencies": {
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1"
+    "react-scripts": "^5.0.1",
+    "ts-loader": "^9.5.1"
   }
 }
