--- a/package.json
+++ b/package.json
@@ -1,37 +1,29 @@
 {
-  "name": "react-electron-tasks",
+  "name": "tasker",
   "version": "1.0.0",
-  "main": "src/main.js",
+  "main": "main.js",
   "scripts": {
-    "start": "npm-run-all --parallel start:react start:electron",
-    "start:react": "webpack serve --mode development",
-    "start:electron": "wait-on http://localhost:3000 && electron .",
-    "build": "webpack --mode production"
+    "start": "webpack --mode development && electron .",
+    "build": "webpack --mode production",
+    "dist": "webpack --mode production && electron-builder"
   },
   "devDependencies": {
-    "@babel/core": "^7.24.9",
-    "@babel/plugin-transform-runtime": "^7.24.7",
-    "@babel/preset-env": "^7.25.0",
-    "@babel/preset-react": "^7.24.7",
-    "@pmmmwh/react-refresh-webpack-plugin": "^0.5.8",
-    "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.3.0",
-    "babel-loader": "^8.3.0",
-    "electron": "^24.8.8",
-    "electron-is-dev": "^2.0.0",
-    "html-webpack-plugin": "^5.5.0",
-    "npm-run-all": "^4.1.5",
-    "react-refresh": "^0.11.0",
-    "typescript": "^5.5.4",
-    "wait-on": "^6.0.0",
-    "webpack": "^5.93.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.0.4"
+    "@babel/preset-react": "^7.0.0",
+    "babel-loader": "^8.0.0",
+    "electron": "^25.0.0",
+    "electron-builder": "^24.0.0",
+    "webpack": "^5.0.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "^5.0.1",
-    "ts-loader": "^9.5.1"
+    "electron-is-dev": "^3.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0"
+  },
+  "build": {
+    "appId": "com.example.myapp",
+    "linux": {
+      "target": "AppImage"
+    }
   }
 }
