--- a/package.json
+++ b/package.json
@@ -6,7 +6,12 @@
     "scripts": {
         "start": "electron ."
     },
+    "dependencies": {
+        "electron": "^13.0.0",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1"
+    },
     "devDependencies": {
-        "electron": "^latest"
+        "electron": "^13.0.0"
     }
 }
