--- a/package.json
+++ b/package.json
@@ -3,13 +3,19 @@
     "version": "1.0.0",
     "main": "main.js",
     "scripts": {
-        "start": "electron ."
+        "start": "vite",
+        "build": "vite build",
+        "electron": "electron .",
+        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5713 && npm run electron\""
     },
     "devDependencies": {
-        "electron": "^13.6.9"
+        "concurrently": "^6.5.1",
+        "wait-on": "^5.3.0"
     },
     "dependencies": {
         "@vitejs/plugin-react": "^4.3.1",
+        "react": "^18.3.1",
+        "react-dom": "^18.3.1",
         "vite": "^5.3.5"
     }
 }
