--- a/package.json
+++ b/package.json
@@ -6,16 +6,28 @@
         "start": "vite",
         "build": "vite build",
         "electron": "electron .",
-        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5713 && npm run electron\""
-    },
-    "devDependencies": {
-        "concurrently": "^6.5.1",
-        "wait-on": "^5.3.0"
+        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5173 && sleep 2 && npm run electron\""
     },
     "dependencies": {
-        "@vitejs/plugin-react": "^4.3.1",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
-        "vite": "^5.3.5"
-    }
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "electron": "^25.0.0",
+        "sleep": "^6.3.0"
+    },
+    "devDependencies": {
+        "@vitejs/plugin-react": "^3.0.0",
+        "concurrently": "^7.6.0",
+        "electron": "^25.0.0",
+        "vite": "^5.0.0",
+        "wait-on": "^5.3.0"
+    },
+    "build": {
+        "appId": "com.example.react-electron-app",
+        "productName": "React Electron App"
+    },
+    "files": [
+        "build/**/*",
+        "main.js",
+        "preload.js"
+    ]
 }
