--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
         "start": "vite",
         "build": "vite build",
         "electron": "electron .",
-        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5173 && npm run electron\""
+        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5173 && echo 'Vite is up, starting Electron...' && npm run electron\""
     },
     "dependencies": {
+        "electron": "^25.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
-        "electron": "^25.0.0",
         "sleep": "^6.3.0"
     },
     "devDependencies": {
-        "@vitejs/plugin-react": "^3.0.0",
+        "@vitejs/plugin-react": "^4.3.1",
         "concurrently": "^7.6.0",
         "electron": "^25.0.0",
         "vite": "^5.0.0",
