--- a/package.json
+++ b/package.json
@@ -6,10 +6,9 @@
         "start": "vite",
         "build": "vite build",
         "electron": "electron .",
-        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5173 && echo 'Vite is up, starting Electron...' && npm run electron\""
+        "dev": "concurrently \"npm run start\" \"wait-on http://localhost:5173 && echo 'Vite is up, starting Electron...' && sleep 2 && npm run electron\""
     },
     "dependencies": {
-        "electron": "^25.0.0",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "sleep": "^6.3.0"
@@ -19,14 +18,14 @@
         "concurrently": "^7.6.0",
         "electron": "^25.0.0",
         "vite": "^5.0.0",
-        "wait-on": "^5.3.0"
+        "wait-on": "^7.2.0"
     },
     "build": {
         "appId": "com.example.react-electron-app",
         "productName": "React Electron App"
     },
     "files": [
-        "build/**/*",
+        "dist/**/*",
         "main.js",
         "preload.js"
     ]
